@@ -9,6 +9,7 @@
     * Fixes for Wordpress importer (#274, #252, #271)
     * Better error message for invalid post date (#291)
     * Print formatted fatal exceptions to stdout on build failure
+    * Add Tumblr importer (#323)
   * Bug Fixes
     * Secure additional path exploits
 
